# homenetwork-viewer

./: .gitignore  .lintstagedrc.json  LICENSE  PROJECT.md  README.md  docker-compose.yml  package-lock.json  package.json  part1_answers.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  collector.py  dump_openapi.py  main.py  models.py  oui-prefixes.txt  oui.py  storage.py  wol.py
backend/app/seed/: devices.json
backend/scripts/: update_oui.py
backend/tests/: conftest.py  test_api.py  test_collector.py  test_models.py  test_oui.py  test_parts.py  test_reachability.py  test_storage.py  test_wol.py
data/: devices.schema.json
design-prototype/: .design-canvas.state.json  .thumbnail  Home Network Explorer.html  README.md
design-prototype/src/: data.jsx  variant-noc.jsx  view-cables.jsx  view-detail.jsx
design-prototype/src/reference/: variant-atelier.jsx  (+1 more)
docs/: 01-overview.md  02-getting-started.md  03-architecture.md  04-usage.md  05-data-and-customize.md  06-operations.md  07-glossary.md  README.md  competitive-analysis.md
frontend/: .prettierignore  .prettierrc  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  CatalogContext.ts  Toast.test.tsx  api.test.ts  api.ts  main.tsx  test-setup.ts  theme.css  types.ts  version.test.ts  version.ts
spec/: Specification.html  homenet-spec.md
(+50 files in other folders)
